Refactor shopverse storefront and refresh UI flows