@@ -5,9 +5,22 @@ description: Evidence-based labs and interview scenarios for JVM, GC, virtual th
 
 # Java Senior Labs And Architecture Interview Workbook
 
+<DocLabels items={[
+  {label: 'Advanced Java', tone: 'advanced'},
+  {label: 'Executable labs', tone: 'intermediate'},
+  {label: 'Architecture interview', tone: 'advanced'},
+  {label: 'Evidence-driven', tone: 'production'},
+]} />
+
 This workbook is the completion gate for the senior Java track. Each answer must
 state the invariant, runtime mechanism, trade-off, evidence, failure behavior,
 and rejected alternatives. API-name answers are incomplete.
+
+<DocCallout type="production" title="Bound diagnostic experiments">
+Run failure, saturation, native-memory, and GC experiments with explicit time,
+memory, and concurrency limits in an isolated environment. Capture the command
+and configuration with the evidence so another engineer can reproduce the result.
+</DocCallout>
 
 ## Executable Lab Matrix
 
@@ -73,14 +86,92 @@ different compatibility and operational risks.
 
 ## Architecture Interview Scenarios
 
-1. A 64-core service becomes slower with a 500-thread CPU pool. Explain runnable contention, context switching, cache locality and downstream bounds.
-2. A `ConcurrentHashMap` cache is correct in tests but stale across replicas. Separate thread safety from distributed coherence.
-3. ZGC lowers pauses but total latency rises. Investigate CPU headroom, allocation, queues and dependency latency.
-4. A plugin cannot unload after redeploy. Trace threads, context class loaders, statics, drivers, logging and reflection caches.
-5. Parallel streams slow an endpoint. Examine split quality, work granularity, ordering, blocking and common-pool interference.
-6. A virtual-thread service exhausts the database. Explain why cheap threads require connection/admission limits.
-7. A module migration breaks reflection. Decide whether the dependency needs exported API, qualified opening, method handles or redesign.
-8. A microbenchmark proves object pooling is faster. Challenge warm-up, escape analysis, dead-code elimination, contention and production allocation profiles.
+Attempt each scenario before opening its model-answer evidence.
+
+<ExpandableAnswer title="1. A 64-core service becomes slower with a 500-thread CPU pool">
+
+For CPU-bound work, hundreds of runnable platform threads compete for a much
+smaller number of effective cores. Confirm the diagnosis with CPU utilization,
+runnable-queue length, context-switch rate, JFR method samples, and downstream
+wait time. Size CPU execution near measured parallel capacity, keep its queue
+bounded, and isolate blocking dependencies; merely reducing the pool is not a
+complete answer unless overload behavior is defined.
+
+</ExpandableAnswer>
+
+<ExpandableAnswer title="2. A ConcurrentHashMap cache is correct in tests but stale across replicas">
+
+`ConcurrentHashMap` coordinates threads inside one JVM; it supplies no coherence
+protocol between processes. Establish the authoritative data source and measure
+cache age, invalidation lag, event ordering, and missed updates. Use versioned
+invalidation or update events, bounded TTLs, and an explicit stale-read policy;
+also define recovery when a replica misses events or rejoins after an outage.
+
+</ExpandableAnswer>
+
+<ExpandableAnswer title="3. ZGC lowers pauses but total latency rises">
+
+Lower stop-the-world time can trade for concurrent collector CPU and memory
+headroom. Correlate JFR and unified GC logs with allocation rate, concurrent-cycle
+CPU, allocation stalls, runnable queues, and downstream spans. Compare the same
+load and live set against the previous collector, then address allocation or
+capacity pressure before concluding that pause reduction improved the service.
+
+</ExpandableAnswer>
+
+<ExpandableAnswer title="4. A plugin cannot unload after redeploy">
+
+A class loader is reclaimable only when no live root reaches it or its classes.
+Inspect thread stacks, `ThreadLocal` values, context class loaders, parent-owned
+static registries, JDBC drivers, logging appenders, executors, and reflection
+caches. Add an explicit plugin shutdown contract, deregister resources, terminate
+owned threads, and verify unloading through class histograms or JFR after repeated
+redeploys rather than relying on one heap snapshot.
+
+</ExpandableAnswer>
+
+<ExpandableAnswer title="5. Parallel streams slow an endpoint">
+
+Check whether the spliterator divides evenly, each element has enough CPU work,
+encounter order constrains merging, or a stage blocks. JFR should distinguish
+useful computation from common-pool queueing and interference with unrelated
+parallel streams or futures. Prefer a sequential pipeline for small or blocking
+work; if parallelism is justified, give the workload explicit execution ownership
+and validate end-to-end latency under concurrent requests.
+
+</ExpandableAnswer>
+
+<ExpandableAnswer title="6. A virtual-thread service exhausts the database">
+
+Virtual threads make blocked tasks cheap; they do not create connections or
+increase database throughput. Bound database admission with the connection pool
+or a semaphore, impose queue and operation deadlines, propagate cancellation,
+and define rejection behavior. Validate the design with connection-wait time,
+query latency, database saturation, and the number and age of queued requests.
+
+</ExpandableAnswer>
+
+<ExpandableAnswer title="7. A module migration breaks reflection">
+
+First identify whether the dependency needs a public type, deep access to a
+specific package, or dynamic invocation of an already accessible member. Export
+public contracts, use a qualified `opens` only for justified deep reflection,
+and remember that method handles still obey access rules. Prefer redesign over a
+broad `--add-opens`; test the module path in CI and record the compatibility and
+security cost of any temporary runtime flag.
+
+</ExpandableAnswer>
+
+<ExpandableAnswer title="8. A microbenchmark proves object pooling is faster">
+
+Reproduce the result with multiple JMH forks, adequate warm-up, consumed outputs,
+and allocation and contention profilers. Check whether escape analysis removed
+the unpooled allocation, whether dead-code elimination changed the workload, and
+whether the pool adds synchronization or retention under concurrency. Compare
+against production allocation profiles and latency distributions before accepting
+a design that increases ownership and lifecycle complexity.
+
+</ExpandableAnswer>
 
 ## Completion Rubric
 
